--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.1",
         "bootstrap": "^4.5.0",
+        "marked": "^1.1.1",
         "md-to-pdf": "^3.1.1",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
