--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "yargs": "^15.4.1"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts start --no-cache",
         "build": "react-scripts build && node ./resume/buildResume.js --outputDir=./build",
         "eject": "react-scripts eject"
     },
