--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
         "@fortawesome/fontawesome-free": "^5.13.1",
         "bootstrap": "^4.5.0",
         "marked": "^1.1.1",
-        "md-to-pdf": "^3.1.1",
-        "node-sass": "^4.14.1",
         "react": "^16.13.1",
         "react-bootstrap": "^1.3.0",
         "react-dom": "^16.13.1",
-        "react-scripts": "3.4.1",
-        "yargs": "^15.4.1"
+        "react-scripts": "3.4.1"
     },
     "scripts": {
         "start": "react-scripts start --no-cache",
@@ -36,6 +33,10 @@
         ]
     },
     "devDependencies": {
-        "react-snap": "^1.23.0"
+        "react-snap": "^1.23.0",
+        "md-to-pdf": "^3.1.1",
+        "yargs": "^15.4.1",
+        "node-sass": "^4.14.1"
+
     }
 }
