--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     },
     "devDependencies": {
         "react-snap": "^1.23.0"
+    },
+    "reactSnap": {
+        "inlineCss": true
     }
 }
