--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "scripts": {
         "start": "react-scripts start --no-cache",
         "build": "react-scripts build && node ./resume/buildResume.js --outputDir=./build",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "postbuild": "react-snap"
     },
     "eslintConfig": {
         "extends": "react-app"
