--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "react": "^16.13.1",
         "react-bootstrap": "^1.3.0",
         "react-dom": "^16.13.1",
+        "react-responsive-carousel": "^3.2.9",
         "react-scripts": "3.4.1"
     },
     "scripts": {
@@ -33,9 +34,9 @@
         ]
     },
     "devDependencies": {
-        "react-snap": "^1.23.0",
         "md-to-pdf": "^3.1.1",
-        "yargs": "^15.4.1",
-        "node-sass": "^4.14.1"
+        "node-sass": "^4.14.1",
+        "react-snap": "^1.23.0",
+        "yargs": "^15.4.1"
     }
 }
