--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "react-bootstrap": "^1.3.0",
         "react-dom": "^17.0.2",
         "react-responsive-carousel": "^3.2.9",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3"
     },
     "scripts": {
