--- a/package.json
+++ b/package.json
@@ -1,43 +1,42 @@
 {
-    "name": "portfolio",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.13.1",
-        "bootstrap": "^4.5.0",
-        "marked": "^2.0.3",
-        "node-sass": "^5.0.0",
-        "react": "^17.0.2",
-        "react-bootstrap": "^1.3.0",
-        "react-dom": "^17.0.2",
-        "react-responsive-carousel": "^3.2.9",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.3"
-    },
-    "scripts": {
-        "start": "react-scripts start --no-cache",
-        "build": "react-scripts build && node ./resume/buildResume.js --outputDir=./build",
-        "eject": "react-scripts eject",
-        "postbuild": "react-snap"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "md-to-pdf": "^3.1.1",
-        "react-snap": "^1.23.0",
-        "yargs": "^16.2.0"
-    }
+  "name": "portfolio",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.1",
+    "bootstrap": "^4.5.0",
+    "marked": "^2.0.3",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.9",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3"
+  },
+  "scripts": {
+    "start": "react-scripts start --no-cache",
+    "build": "react-scripts build && node ./resume/buildResume.js --outputDir=./build",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "md-to-pdf": "^3.1.1",
+    "react-snap": "^1.23.0",
+    "yargs": "^16.2.0"
+  }
 }
